# mask2former

./: .dockerignore  .env.example  .gitignore  MODEL_CARD.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements-monitoring.txt  requirements-ros2-client.txt
.dvc/: config
.github/workflows/: ci.yml  docker.yml
api/: Dockerfile  main.py  requirements-api.txt
data/: raw.dvc
docs/: 00_overview.md  01_data_management.md  02_data_pipeline.md  03_training.md  04_onnx_quantization.md  05_model_registry.md  06_serving.md  07_monitoring.md  08_cicd.md  09_ros2.md  10_project_requirements.md  11_google_drive_workflow.md
notebooks/: train_colab.ipynb
ros2_ws/: README.md
ros2_ws/src/mask2former_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/mask2former_ros/config/: params.yaml
ros2_ws/src/mask2former_ros/launch/: segmentation_client.launch.py
ros2_ws/src/mask2former_ros/mask2former_ros/: __init__.py  api_utils.py  publish_test_image.py  segmentation_client.py
scripts/: build_ros2.sh  colab_drive_setup.py  migrate_project_to_drive.sh  mount_gdrive.sh  predict_image.sh  run_drift_report.sh  run_ros2_mode_a.sh  save_ros_viz_once.py  seed_predictions.sh  setup_atlas_mongo.sh  test_ros2_mode_a_once.sh  visualize_predict.py
src/: config_loader.py  evaluate.py  evaluate_onnx.py  evaluate_onnx_fiftyone.py  export_onnx.py  fiftyone_onnx_review.py  inference.py  mongo_logger.py  quantize_int8.py  register_model.py  train.py
tests/: test_evaluate_onnx.py  test_fiftyone_onnx_review.py  test_inference.py  test_mongo_logger.py
(+6 files in other folders)
